--- a/.github/workflows/minimal-usage.yml
+++ b/.github/workflows/minimal-usage.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-cvmfs@main
+    #- uses: eic/setup-cvmfs@main
+    #- uses: cvmfs-contrib/github-action-cvmfs@v1
     - name: Setup CernVM-FS
       run: cat /etc/cvmfs/default.local && ls /cvmfs/eic.opensciencegrid.org/
