--- a/.github/workflows/minimal-usage.yml
+++ b/.github/workflows/minimal-usage.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-cvmfs@main
+    - uses: actions/cernvm-fs-cvmfs@main
     #- uses: eic/setup-cvmfs@main
     #- uses: cvmfs-contrib/github-action-cvmfs@v1
     - name: Setup CernVM-FS
